// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Karura honzon > honzon deposit and debit works > events 1`] = `
[
  {
    "data": {
      "collateralAdjustment": 50000000000000,
      "collateralType": {
        "Token": "KSM",
      },
      "debitAdjustment": 500000000000000,
      "owner": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "PositionUpdated",
    "section": "loans",
  },
]
`;

exports[`Karura honzon > honzon payback works > events 1`] = `
[
  {
    "data": {
      "collateralAdjustment": -50000000000000,
      "collateralType": {
        "Token": "KSM",
      },
      "debitAdjustment": -500000000000000,
      "owner": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "PositionUpdated",
    "section": "loans",
  },
]
`;

exports[`Karura honzon > loans by Dex close works > events 1`] = `
[
  {
    "data": {
      "collateralAdjustment": 50000000000000,
      "collateralType": {
        "Token": "KSM",
      },
      "debitAdjustment": 500000000000000,
      "owner": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "PositionUpdated",
    "section": "loans",
  },
]
`;

exports[`Karura honzon > loans by Dex close works > events 2`] = `
[
  {
    "data": {
      "collateralAdjustment": -50000000000000,
      "collateralType": {
        "Token": "KSM",
      },
      "debitAdjustment": -500000000000000,
      "owner": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "PositionUpdated",
    "section": "loans",
  },
  {
    "data": {
      "collateralType": {
        "Token": "KSM",
      },
      "debitValue": "(rounded 50000000000000)",
      "owner": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "refundCollateralAmount": "(rounded 50000000000000)",
      "soldCollateralAmount": "(rounded 1000000000000)",
    },
    "method": "CloseCDPInDebitByDEX",
    "section": "cdpEngine",
  },
]
`;
